Fixing scrollbar offset

--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ body {
 }
 
 .progress-container {
-  margin-left: -50px;
+  margin-left: 0px;
   width: 100%;
   height: 8px;
   background: #ccc;
